--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
    <header>
     header
    </header>
+   <div class="slider">
+    <h1>slider one</h1>
+    <h1>slider twe</h1>
+   </div>
 </body>
 </html>
