--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
    <header>
     header
    </header>
+   <div class="bannr">
+    <img src="" alt="">
+
+   </div>
    <div class="slider">
     <h1>slider one</h1>
     <h1>slider twe</h1>
