--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <header>
-    header
+   my header
    </header>
    <div class="bannr">
     <img src="" alt="">
@@ -16,7 +16,7 @@
    <div class="slider">
     <h1>slider one</h1>
     <h1>slider twe</h1>
-    <h1>slider three</h1>
+    
    </div>
    <footer>
 
