some change in master

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <header>
-    header
+   my header
    </header>
    <div class="bannr">
     <img src="" alt="">
@@ -20,7 +20,7 @@
    </div>
    <footer>
 
-   all right are reserved
+   all right are reserved 2200
    </footer>
    <script src="script.js"></script>
 </body>
