--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <div class="slider">
     <h1>slider one</h1>
     <h1>slider twe</h1>
+    <h1>branch dev created</h1>
     
    </div>
    <footer>
